--- a/spring-boot-module/src/main/resources/templates/private/favorite-articles.html
+++ b/spring-boot-module/src/main/resources/templates/private/favorite-articles.html
@@ -1,9 +1,9 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+>
 <head>
     <meta charset="UTF-8">
-    <title>Articles</title>
+    <title>Favorite articles</title>
     <link href="#" rel="stylesheet" th:href="@{/webjars/bootstrap/4.2.1/css/bootstrap.min.css}" type="text/css"/>
     <link href="#" rel="stylesheet" th:href="@{/webjars/bootstrap/4.2.1/css/bootstrap.css}" type="text/css"/>
     <link href="#" rel="stylesheet" th:href="@{/webjars/bootstrap/4.2.1/css/bootstrap-grid-jsf.css}" type="text/css"/>
@@ -26,36 +26,33 @@
 </nav>
 <div th:if="${page.list.isEmpty()}">
     <div class="alert alert-info text-center">
-        There is no articles at the moment.
+        There is no favorite articles at the moment.
+    </div>
+</div>
+<div th:if="${param.favorite_added}">
+    <div class="alert alert-success text-center">
+        Article was successfully added to favorites.
     </div>
 </div>
 <div class="align-self-center container-fluid justify-content-center">
     <div class="card-group">
-        <div th:each="article,stat : ${page.list}" style="width: 20%">
-            <form action="#" class="card border-dark"
-                  style="padding: 20px; margin: 20px; width: 350px; height: 450px"
-                  th:object="${article}"
+        <div th:each="favorite : ${page.list}" style="width: 20%">
+            <form action="#" class="card border-dark" style="padding: 20px; margin: 20px; width: 350px; height: 450px"
+                  th:object="${favorite.article}"
                   method="post">
                 <b class="text-lg-center text">Title:</b>
                 <span class="text-lg-center"
                       th:text="*{title}"></span>
                 <b class="text-lg-center text">Written by:</b>
                 <span class="text-lg-center"
-                      th:text="${article.author.surname + ' ' + article.author.name}"></span>
+                      th:text="${favorite.article.author.surname + ' ' + favorite.article.author.name}"></span>
                 <b class="text-lg-center">Written:</b>
                 <span class="text-lg-center text-center" th:text="*{dateOfCreation}"></span>
                 <b class="text-lg-center"><span>Summary:</span></b>
                 <span class="text-lg-center text-center" th:text="*{summary}"></span>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" th:href="@{/article(article_number = ${article.id})}">More</a>
+                    <a class="nav-link" href="#" th:href="@{/article(article_number = ${favorite.article.id})}">More</a>
                 </li>
-                <div sec:authorize="isAuthenticated()">
-                    <span sec:authorize="hasAuthority('Customer User')">
-                <br><input class="btn btn-secondary" type="submit" value="Add to favorites" formmethod="post"
-                           th:formaction="@{/private/articles/favorites(user_id = ${user.userID},
-                           article_id = ${article.id}, page = ${page.currentPageNumber})}">
-                    </span>
-                </div>
             </form>
         </div>
     </div>
