--- a/spring-boot-module/src/main/resources/templates/article.html
+++ b/spring-boot-module/src/main/resources/templates/article.html
@@ -12,26 +12,28 @@
 <body>
 <div th:replace="fragments/header.html"/>
 <div class="align-self-center container-fluid justify-content-center">
-    <div class="card-group">
-        <form action="#" class="card"
-              style="padding: 20px; margin: 20px; width: 400px; height: 350px"
-              th:action="@{#}" th:object="${article}"
-              method="post">
+<div class="card border-dark text-center" style="padding: 20px; margin-top: 30px; margin-left: 10%; width: 80%; height: auto">
+        <form action="#" th:action="@{#}" th:object="${article}" method="post">
             <b class="text-lg-center"><span>Title:</span></b>
-            <span class="text-lg-center text-center" th:text="*{title}"></span>
-            <b class="text-lg-center text">Written by:</b>
-            <span class="text-lg-center"
+            <br><span class="text-lg-center text-center" th:text="*{title}"></span>
+            <br><b class="text-lg-center text">Written by:</b>
+            <br><span class="text-lg-center"
                   th:text="${article.author.surname + ' ' + article.author.name}"></span>
-            <b class="text-lg-center">Written:</b>
-            <span class="text-lg-center text-center" th:text="*{dateOfCreation}"></span>
-            <b class="text-lg-center"><span>Context:</span></b>
-            <span class="text-lg-center text-center" th:text="*{content}"></span>
+            <br><b class="text-lg-center">Written:</b>
+            <br><span class="text-lg-center text-center" th:text="*{dateOfCreation}"></span>
+            <br><b class="text-lg-center"><span>Context:</span></b>
+            <br><span class="text-lg-center text-center" th:text="*{content}"></span>
+            <div sec:authorize="isAuthenticated()">
+                    <span sec:authorize="hasAuthority('Sale User')">
+                <br><a class="btn-link" th:href="@{/private/articles/edit(article_number = ${article.id})}" th:text="Edit"></a>
+                    </span>
+            </div>
         </form>
-
-
-        <div th:each="comment : ${article.comments}" style="width: 70%">
-            <form action="#" class="card border-dark"
-                  style="padding: 20px; margin: 20px;  height: 200px"
+</div>
+    <div class="card-group">
+        <div th:each="comment : ${article.comments}" style="width: 70%; margin-left: 15%">
+            <div class="card border-dark text-center" style="padding: 20px; margin-top: 10px; height: auto">
+            <form action="#"
                   th:action="@{/article/comment/delete(comment_id = ${comment.id}, article_number = ${article.id})}"
                   th:object="${comment}"
                   method="post">
@@ -48,12 +50,18 @@
                            value="Delete">
                     </span>
                 </div>
+                <div sec:authorize="isAuthenticated()">
+                    <span sec:authorize="hasAuthority('Sale User')">
+                <br><input class="btn btn-secondary" type="submit" value="Delete">
+                    </span>
+                </div>
             </form>
+            </div>
         </div>
     </div>
     <div sec:authorize="isAuthenticated()">
         <div sec:authorize="hasAuthority('Customer User')">
-            <form th:action="@{/article/comment(article_number = ${article.id}, author_id = ${user.userID})}"
+            <form th:action="@{/article/comment(article_number=${article.id}, author_id=${user.userID})}"
                   th:object="${comment}" method="post">
                 <fieldset>
                     <h1>Write your comment:</h1>
@@ -61,7 +69,7 @@
                         <span class="form-control alert alert-danger" th:if="${#fields.hasErrors('content')}"
                               th:errors="*{content}">
                             Content error</span>
-                        <input th:field="*{content}" type="text" name="content" id="content"
+                        <textarea th:field="*{content}" type="text" name="content" id="content"
                                class="form-control input-lg"
                                placeholder="Your comment" required maxlength="200"/>
                     </div>
