--- a/spring-boot-module/src/main/resources/templates/articles.html
+++ b/spring-boot-module/src/main/resources/templates/articles.html
@@ -11,12 +11,14 @@
 </head>
 <body>
 <div th:replace="fragments/header.html"/>
+<div sec:authorize="isAuthenticated()">
+    <div sec:authorize="hasAuthority('Customer User')">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="favorites">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-link" href="#" th:href="@{/private/articles/favorites}">Favorite articles</a>
@@ -24,9 +26,38 @@
         </ul>
     </div>
 </nav>
+</div>
+</div>
+<div sec:authorize="isAuthenticated()">
+    <div sec:authorize="hasAuthority('Sale User')">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="add article">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" th:href="@{/private/articles/add}">Add article</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</div>
 <div th:if="${page.list.isEmpty()}">
     <div class="alert alert-info text-center">
         There is no articles at the moment.
+    </div>
+</div>
+<div th:if="${param.added}">
+    <div class="alert alert-success text-center">
+        Article successfully added.
+    </div>
+</div>
+<div th:if="${param.deleted}">
+    <div class="alert alert-success text-center">
+        Article successfully deleted.
     </div>
 </div>
 <div class="align-self-center container-fluid justify-content-center">
@@ -54,6 +85,13 @@
                 <br><input class="btn btn-secondary" type="submit" value="Add to favorites" formmethod="post"
                            th:formaction="@{/private/articles/favorites(user_id = ${user.userID},
                            article_id = ${article.id}, page = ${page.currentPageNumber})}">
+                    </span>
+                </div>
+                <div sec:authorize="isAuthenticated()">
+                    <span sec:authorize="hasAuthority('Sale User')">
+                <br><input class="btn btn-secondary" type="submit" value="Delete" formmethod="post"
+                           th:formaction="@{/private/articles/delete(article_id = ${article.id},
+                           page = ${page.currentPageNumber})}">
                     </span>
                 </div>
             </form>
