Added default Secure API User into db-changelog. Some changes in templates for items.

--- a/spring-boot-module/src/main/resources/templates/item.html
+++ b/spring-boot-module/src/main/resources/templates/item.html
@@ -16,9 +16,9 @@
         <form action="#" th:action="@{#}" th:object="${item}" method="post">
             <b class="text-lg-center"><span>Name:</span></b>
             <br><span class="text-lg-center text-center" th:text="*{name}"></span>
-            <b class="text-lg-center"><span>Unique number:</span></b>
+            <br><b class="text-lg-center"><span>Unique number:</span></b>
             <br><span class="text-lg-center text-center" th:text="*{uniqueNumber}"></span>
-            <b class="text-lg-center"><span>Price:</span></b>
+            <br><b class="text-lg-center"><span>Price:</span></b>
             <br><span class="text-lg-center text-center" th:text="*{price}"></span>
             <br><b class="text-lg-center"><span>Description:</span></b>
             <br><span class="text-lg-center text-center" th:text="*{description}"></span>
