--- a/spring-boot-module/src/main/resources/templates/private/copy-item.html
+++ b/spring-boot-module/src/main/resources/templates/private/copy-item.html
@@ -21,7 +21,8 @@
                     <div class="form-group">
                         <span class="form-control alert alert-danger" th:if="${#fields.hasErrors('uniqueNumber')}"
                               th:errors="*{uniqueNumber}">Unique number error</span>
-                        <input th:field="*{uniqueNumber}" type="text" name="uniqueNumber" id="uniqueNumber" class="form-control input-lg"
+                        <input th:field="*{uniqueNumber}" type="text" name="uniqueNumber" id="uniqueNumber"
+                               class="form-control input-lg"
                                placeholder="Unique number" required maxlength="6"/>
                     </div>
                     <div class="form-group">
