--- a/spring-boot-module/src/main/resources/templates/private/edit-article.html
+++ b/spring-boot-module/src/main/resources/templates/private/edit-article.html
@@ -9,7 +9,8 @@
 <div class="container align-self-center">
     <div class="row" style="margin-top:20px">
         <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-            <form action="#" th:action="@{/private/articles/edit(article_number = ${article.id})}" th:object="${article}" method="post">
+            <form action="#" th:action="@{/private/articles/edit(article_number = ${article.id})}"
+                  th:object="${article}" method="post">
                 <fieldset>
                     <h1>Please edit what you need:</h1>
                     <div class="form-group">
@@ -23,7 +24,8 @@
                         <span class="form-control alert alert-danger" th:if="${#fields.hasErrors('content')}"
                               th:errors="*{content}">Content error</span>
                         <textarea th:field="*{content}" type="text" name="content" id="content"
-                                  class="form-control" placeholder="Content" rows="5" required maxlength="1000"></textarea>
+                                  class="form-control" placeholder="Content" rows="5" required
+                                  maxlength="1000"></textarea>
                     </div>
                     <div class="row">
                         <div class="col-xs-6 col-sm-6 col-md-6">
