--- a/spring-boot-module/src/main/resources/templates/fragments/header.html
+++ b/spring-boot-module/src/main/resources/templates/fragments/header.html
@@ -14,28 +14,33 @@
                 <li sec:authorize="isAnonymous()" class="nav-item">
                     <a class="nav-link" href="#" th:href="@{/login}">Login</a>
                 </li>
-                <div sec:authorize="isAuthenticated()">
-                    <li sec:authorize="hasAuthority('Administrator')" class="nav-item">
+                <div sec:authorize="isAuthenticated() && hasAuthority('Administrator')">
+                    <li class="nav-item">
                         <a class="nav-link" href="#" th:href="@{/private/users}">Users</a>
                     </li>
                 </div>
-                <div sec:authorize="isAuthenticated()">
-                    <li sec:authorize="hasAuthority('Customer User')" class="nav-item">
+                <div sec:authorize="isAuthenticated() && hasAuthority('Customer User')">
+                    <li class="nav-item">
                         <a class="nav-link" href="#" th:href="@{/private/profile}">Profile</a>
                     </li>
                 </div>
-                <div sec:authorize="isAuthenticated()">
-                    <li sec:authorize="hasAuthority('Sale User')" class="nav-item">
+                <div sec:authorize="isAuthenticated() && (hasAuthority('Customer User') || hasAuthority('Sale User'))">
+                    <li class="nav-item">
                         <a class="nav-link" href="#" th:href="@{/items}">Items</a>
                     </li>
                 </div>
-                <div sec:authorize="isAuthenticated()">
-                    <li sec:authorize="hasAuthority('Administrator')" class="nav-item">
+                <div sec:authorize="isAuthenticated() && (hasAuthority('Customer User') || hasAuthority('Sale User'))">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" th:href="@{/orders}">Orders</a>
+                    </li>
+                </div>
+                <div sec:authorize="isAuthenticated() && (hasAuthority('Customer User') || hasAuthority('Administrator'))">
+                    <li class="nav-item">
                         <a class="nav-link" href="#" th:href="@{/reviews}">Reviews</a>
                     </li>
                 </div>
-                <div sec:authorize="isAuthenticated()">
-                    <li sec:authorize="hasAuthority('Customer User') || hasAuthority('Sale User')" class="nav-item">
+                <div sec:authorize="isAuthenticated() && (hasAuthority('Customer User') || hasAuthority('Sale User'))">
+                    <li class="nav-item">
                         <a class="nav-link" href="#" th:href="@{/articles}">Articles</a>
                     </li>
                 </div>
