--- a/spring-boot-module/src/main/resources/templates/private/add-article.html
+++ b/spring-boot-module/src/main/resources/templates/private/add-article.html
@@ -11,7 +11,7 @@
         <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
             <form th:action="@{/private/articles/add}" th:object="${article}" method="post">
                 <fieldset>
-                    <h1>Please input user info</h1>
+                    <h1>Please input article:</h1>
                     <div class="form-group">
                         <span class="form-control alert alert-danger" th:if="${#fields.hasErrors('dateOfCreation')}"
                               th:errors="*{dateOfCreation}">
@@ -30,7 +30,7 @@
                     <div class="form-group">
                         <span class="form-control alert alert-danger" th:if="${#fields.hasErrors('content')}"
                               th:errors="*{content}">Content error</span>
-                        <textarea th:field="*{content}" type="text" name="content" id="content"
+                        <textarea th:field="*{content}" type="text" name="content" id="content" style="resize: none"
                                   class="form-control" placeholder="Content" rows="5" required maxlength="1000"/>
                     </div>
                     <div class="row">
