--- a/spring-boot-module/src/main/resources/templates/item.html
+++ b/spring-boot-module/src/main/resources/templates/item.html
@@ -10,7 +10,8 @@
 <body>
 <div th:replace="fragments/header.html"/>
 <div class="align-self-center container-fluid justify-content-center">
-    <div class="card border-dark text-center" style="padding: 20px; margin-top: 30px; margin-left: 10%; width: 80%; height: auto">
+    <div class="card border-dark text-center"
+         style="padding: 20px; margin-top: 30px; margin-left: 10%; width: 80%; height: auto">
         <form action="#" th:action="@{#}" th:object="${item}" method="post">
             <b class="text-lg-center"><span>Name:</span></b>
             <br><span class="text-lg-center text-center" th:text="*{name}"></span>
