--- a/spring-boot-module/src/main/resources/templates/order.html
+++ b/spring-boot-module/src/main/resources/templates/order.html
@@ -3,7 +3,7 @@
 >
 <head>
     <meta charset="UTF-8">
-    <title>Article</title>
+    <title>Order</title>
     <link href="#" rel="stylesheet" th:href="@{/webjars/bootstrap/4.2.1/css/bootstrap.min.css}" type="text/css"/>
     <link href="#" rel="stylesheet" th:href="@{/webjars/bootstrap/4.2.1/css/bootstrap.css}" type="text/css"/>
     <link href="#" rel="stylesheet" th:href="@{/webjars/bootstrap/4.2.1/css/bootstrap-grid-jsf.css}" type="text/css"/>
