--- a/spring-boot-module/src/main/resources/templates/private/edit-article.html
+++ b/spring-boot-module/src/main/resources/templates/private/edit-article.html
@@ -1,7 +1,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add user</title>
+    <title>Edit article</title>
     <link href="#" th:href="@{/webjars/bootstrap/4.2.1/css/bootstrap.min.css}" rel="stylesheet" type="text/css"/>
 </head>
 <body>
