--- a/spring-boot-module/src/main/resources/templates/private/upload.html
+++ b/spring-boot-module/src/main/resources/templates/private/upload.html
@@ -1,26 +1,34 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add review</title>
+    <title>Upload items</title>
     <link href="#" th:href="@{/webjars/bootstrap/4.2.1/css/bootstrap.min.css}" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <div th:replace="fragments/header.html"/>
+<div th:if="${param.invalid_file}">
+    <div class="alert alert-danger text-center">
+        You file is not valid.
+    </div>
+</div>
+<div th:if="${param.invalid_content}">
+    <div class="alert alert-danger text-center">
+        There is some problems with your file content.
+    </div>
+</div>
 <div class="container align-self-center">
     <div class="row" style="margin-top:20px">
         <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-            <form th:action="@{/reviews/add}" th:object="${review}" method="post">
+            <form th:action="@{/private/items/upload}" th:object="${upload_form}" enctype="multipart/form-data"
+                  method="post">
                 <fieldset>
-                    <h1>Please input your review:</h1>
+                    <h1>Choose file to upload:</h1>
                     <div class="form-group">
-                        <span class="form-control alert alert-danger" th:if="${#fields.hasErrors('review')}"
-                              th:errors="*{review}">Review error</span>
-                        <textarea th:field="*{review}" type="text" name="review" id="review" style="resize: none"
-                                  class="form-control" placeholder="Review" rows="5" required/>
+                        <input type="file" th:field="*{file}" name="file" id="file" class="form-control" required/>
                     </div>
                     <div class="row">
                         <div class="col-xs-6 col-sm-6 col-md-6">
-                            <input type="submit" class="btn btn-lg btn-primary btn-block" value="Add"/>
+                            <input type="submit" class="btn btn-lg btn-primary btn-block" value="Upload"/>
                         </div>
                     </div>
                 </fieldset>
