--- a/spring-boot-module/src/main/resources/templates/private/upload.html
+++ b/spring-boot-module/src/main/resources/templates/private/upload.html
@@ -13,7 +13,7 @@
 </div>
 <div th:if="${param.invalid_content}">
     <div class="alert alert-danger text-center">
-        There is some problems with your file content.
+        There is one or more items with unique number conflict.
     </div>
 </div>
 <div class="container align-self-center">
