--- a/spring-boot-module/src/main/resources/templates/private/add-article.html
+++ b/spring-boot-module/src/main/resources/templates/private/add-article.html
@@ -17,7 +17,7 @@
                               th:errors="*{dateOfCreation}">
                             Date error</span>
                         <input th:field="*{dateOfCreation}" type="datetime-local" name="dateOfCreation"
-                               id="dateOfCreation" class="form-control input-lg"
+                               id="dateOfCreation" class="form-control input-lg"  max="9999-01-01T23:59"
                                required/>
                     </div>
                     <div class="form-group">
